Fixed z-index for dropdown

--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -208,7 +208,7 @@ section, header {
 
         #nav__user_icon_details.showing {
           display: block;
-          z-index: 3;
+          z-index: 3000;
         }
 
         #nav__user_icon_image {
